--- a/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
+++ b/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
@@ -250,7 +250,7 @@
                 </nb-card-body>
             </div>
         </nb-card>
-
+        <!--CONTACT INFO-->
         <nb-card>
             <nb-card-header>
 				<span class="text-primary font-weight-bold">
