search results | remove forgot passwrd

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <h1 class="title text-info slide-in">
-    <img src="/assets/logo/logo_transparent.png" alt="" style="" height="325">
+  <img src="/assets/logo/logo_transparent.png" alt="" style="" height="325" />
 </h1>
 
 <h1 id="title" class="title">Login</h1>
@@ -48,7 +48,7 @@
     />
     <ng-container *ngIf="email.invalid && email.touched">
       <p class="error-message" *ngIf="email.errors?.required">
-<!--        Email is required!-->
+        <!--        Email is required!-->
       </p>
       <p class="error-message" *ngIf="email.errors?.pattern">
         Email should be the real one!
@@ -75,7 +75,7 @@
     />
     <ng-container *ngIf="password.invalid && password.touched">
       <p class="error-message" *ngIf="password.errors?.required">
-<!--        Password is required!-->
+        <!--        Password is required!-->
       </p>
       <p
         class="error-message"
@@ -90,6 +90,11 @@
   </div>
 
   <div class="form-control-group accept-group">
+    <!-- <section class="another-action" aria-label="Register"> -->
+    <a class="text-link" routerLink="../resetpass"> Reset Password</a>
+    <!-- </section> -->
+  </div>
+  <!-- <div class="form-control-group accept-group">
     <nb-checkbox
       name="rememberMe"
       [(ngModel)]="user.rememberMe"
@@ -99,7 +104,7 @@
     <a class="forgot-password" routerLink="../request-password"
       >Forgot Password?</a
     >
-  </div>
+  </div> -->
 
   <button
     nbButton
@@ -117,8 +122,4 @@
   <a class="text-link" routerLink="../contact-us"
     >contact-us @ ep-techsolutions.com</a
   >
-</section>
-
-<section class="another-action" aria-label="Register">
-  <a class="text-link" routerLink="../resetpass"> Reset Password</a>
 </section>
