--- a/src/app/pages/customer/customer-search/customer-search.component.scss
+++ b/src/app/pages/customer/customer-search/customer-search.component.scss
@@ -1,8 +1,13 @@
 .search_results {
   display: inline-block;
-  padding: 1rem 0 0 1rem;
 }
 
 .title_search_results {
   display: inline-block;
+}
+
+.total_results {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
