add toolbar to srv

--- a/src/app/@theme/styles/table.scss
+++ b/src/app/@theme/styles/table.scss
@@ -3,3 +3,9 @@
   min-width: 650px;
   margin: 0 auto;
 }
+
+.total_results {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
